# groundcheck

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
api/: README.md  pyproject.toml
api/src/groundcheck_api/: __init__.py  main.py  schemas.py
api/tests/: test_api.py  test_contract.py  test_frontend_wired.py
app/: GroundCheck.dc.html  README.md
core/: README.md  pyproject.toml
core/examples/: example_grounded.json  example_hallucinated.json  example_refusal.json  example_unlocated.json
core/src/groundcheck/: __init__.py  cli.py  config.py  decompose.py  ground.py  highlight.py  llm.py  metrics.py  models.py  pipeline.py  prompts.py  worked_example.py
core/tests/: conftest.py  test_cli.py  test_config.py  test_cost.py  test_decompose.py  test_ground.py  test_highlight.py  test_majority.py  test_metrics.py  test_models.py  test_pipeline.py  test_pipeline_hardening.py  test_prompts.py  test_provider.py  test_readme_quickstart.py
docs/: README.md  architecture.md  eval.md
e2e/: conftest.py  pytest.ini  test_a11y_axe.py  test_money_demo.py
eval/: README.md  __init__.py  requirements.txt  run.py
eval/datasets/: tier1_claims.yaml  tier2_answers.yaml
eval/tests/: conftest.py  test_datasets.py  test_harness.py
scripts/: README.md  dev.ps1  dev.sh  test.ps1  test.sh
