[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groundcheck"
version = "0.1.0"
description = "Faithfulness Firewall engine — verify an answer's claims against a source document."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    # anthropic is imported lazily inside functions (Split 02+); listing it here is fine.
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "api: needs ANTHROPIC_API_KEY (skipped without a key)",
]
