[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groundcheck"
version = "0.1.0"
description = "Faithfulness Firewall engine — verify an answer's claims against a source document."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    # Both SDKs are imported lazily inside the providers (Split 02+) so `import
    # groundcheck` stays key-free; listing them here is fine. `openai` backs the
    # Azure gpt-5.5 provider (the only key available — see PROGRESS.md divergence).
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "api: needs ANTHROPIC_API_KEY (skipped without a key)",
]
